# stockpulse

./: .gitignore  README.md
.github/workflows/: ci.yml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260326_001_auth_users.py  20260326_002_subscriptions.py  20260326_003_watchlist.py  20260326_004_newsletter.py  20260326_005_market_data.py  20260326_006_analytics.py
backend/app/: config.py  main.py
backend/app/core/: database.py
backend/app/models/: __init__.py  analytics.py  market_data.py  newsletter.py  subscription.py  user.py  watchlist.py
backend/app/repositories/: __init__.py  user_repo.py
backend/app/routers/: auth.py
backend/app/services/: auth_service.py
backend/tests/: conftest.py
backend/tests/unit/: test_config.py  test_user_repo.py
blogs/: blog-chungkhoan-2026-03-23.docx
document/: competitive-brief-stockpulse-vs-fireant.docx  feature-priority-stockpulse-vn.docx  feature-priority-stockpulse-vn.md  metrics-framework-stockpulse-vn.docx  planning-phase0.md  schema.sql  sprint0-detail-plan.md  y-tuong-ung-dung-chung-khoan.md
frontend/: next.config.js  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/auth/callback/: page.tsx
infra/: .env.example  docker-compose.yml
