[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stockpulse-backend"
version = "0.1.0"
description = "StockPulse VN - Vietnamese stock market Telegram bot"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    # Telegram bot
    "python-telegram-bot[ext]>=21.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    # Cache & queue
    "redis[hiredis]>=5.2.0",
    # Scheduler
    "apscheduler>=3.11.0",
    # Analytics
    "posthog>=3.0.0",
    # HTTP client
    "httpx>=0.28.0",
    # Config & validation
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    # Market data
    "vnstock>=3.0.0",
    "yfinance>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
omit = ["tests/*", "alembic/*"]
